--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Our first step will be to create two distinct columns:\n",
     "1. Column **Topics:** will contain unique topics present in each news article, allowing us to systematically analyze the subject areas covered by the news article.\n",
-    "2. **Titles:** This data will contain the headline or title of each news article, which we will later use for semantic matching.\n",
+    "2. Column **Titles:** will contain the headline or title of each news article, which we will later use for semantic matching.\n",
     "\n",
     "Once our tables are set up and populated, we will utilize a powerful natural language processing approach to link news article titles to their most relevant topics. Specifically, we will employ the `sentence-transformers` model—a state-of-the-art model designed for producing high-quality sentence embeddings. This model will run in an UDF leveraging the GPU to efficiently generate vector representations for both the titles and topics.\n",
     "\n",
