--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -12,7 +12,7 @@
     "1. Column **Topics:** will contain unique topics present in each news article, allowing us to systematically analyze the subject areas covered by the news article.\n",
     "2. Column **Titles:** will contain the headline or title of each news article, which we will later use for semantic matching.\n",
     "\n",
-    "Once our tables are set up and populated, we will utilize a powerful natural language processing approach to link news article titles to their most relevant topics. Specifically, we will employ the `sentence-transformers` model—a state-of-the-art model designed for producing high-quality sentence embeddings. This model will run in an UDF leveraging the GPU to efficiently generate vector representations for both the titles and topics.\n",
+    "Once our tables are set up and populated, we will utilize a powerful natural language processing approach to link news article titles to their most relevant topics. Specifically, we will employ the `sentence-transformers` model—a state-of-the-art model designed for producing high-quality sentence embeddings. This model will run in a UDF leveraging the GPU to efficiently generate vector representations for both the titles and topics.\n",
     "\n",
     "By comparing these embeddings, our system will automatically match each article title with the most relevant topic from our topics table. Finally, we will output the best-matching topic for each title, providing valuable insights into the subject distribution of our set of news articles."
    ],
