Apply suggestions from code review
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "source": [
     "### Prerequisites\n",
-    "- Run the [S3 VS tutorial](../cloud/02_s3_vs_reuters.ipynb) in order to populate our input data"
+    "- Run the [S3 VS tutorial](../cloud/02_s3_vs_reuters.ipynb) in order to populate the input data"
    ],
    "id": "73a7e60d9fe78077"
   },
