--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -51,7 +51,7 @@
     "### Instantiate ScriptLanguagesContainer\n",
     "\n",
     "The following cell creates an instance of class `ScriptLanguageContainer` from the notebook-connector,\n",
-    "which enables using the`exaslct` in the AI Lab in a convenient way."
+    "which enables us to use a custom Script Language Container (SLC)"
    ],
    "id": "fd5b8ce9f2bc2326"
   },
