Apply suggestions from code review
Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -119,7 +119,7 @@
    "source": [
     "### Create the UDF\n",
     "\n",
-    "Now create the UDF which implements a \"semantic join\" between pairs of text data (text1, text2) by computing their semantic similarity using a transformer neural network model (from the sentence-transformers library). It runs on a GPU and is designed to scale to large amounts of data by processing in batches. For each pair (text1 and text2), computes the cosine similarity between their embeddings in a row-wise fashion, on the GPU. The UDF returns (emits) text1 and text2, as well as the `similarity_score` (between -1 and 1, with 1.0 = identical).\n"
+    "Now we create the UDF which implements the \"semantic join\" between pairs of text data (text1, text2) by computing their semantic similarity using a transformer neural network model (from the sentence-transformers library). It runs on a GPU and is designed to scale to large amounts of data by processing in batches. For each pair (text1 and text2), it computes the cosine similarity between their embeddings on the GPU. The UDF returns (emits) text1 and text2, as well as the `similarity_score` (between -1 and 1, with 1.0 = identical).\n"
    ],
    "id": "67d0dc114de6c50"
   },
