Apply suggestions from code review
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -258,7 +258,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### Run the UDF on the new data\n",
+    "### Run the UDF on the New Data\n",
     "\n",
     "Now we apply the `semantic_join` UDF on the topics and titles from the NEWS table, which was created by the S3 Virtual Schema tutorial: for every news TITLE, the TOPICs that best semantically match it, ranks them by how similar they are, and filters out all but the strong matches (similarity > 0.5). You get, for each TITLE, a list of TOPICs it is semantically closest to, in order."
    ],
