Apply suggestions from code review
Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -314,7 +314,7 @@
     "- [Set per process memory fraction for Pytorch](https://docs.pytorch.org/docs/stable/generated/torch.cuda.memory.set_per_process_memory_fraction.html)\n",
     "- [TensorFlow LogicalDeviceConfiguration](https://www.tensorflow.org/api_docs/python/tf/config/LogicalDeviceConfiguration)\n",
     "\n",
-    "Additionally, it is possible to control the number of parallel UDF instances by setting the  [UDF Instance Limiting](https://docs.exasol.com/db/latest/database_concepts/udf_scripts/udf_instance_limit.htm).\n"
+    "Additionally, it is possible to control the number of parallel UDF instances per Node and Call by setting the  [UDF Instance Limit](https://docs.exasol.com/db/latest/database_concepts/udf_scripts/udf_instance_limit.htm).\n"
    ],
    "id": "2e1d00d1b4c3ea0f"
   }
