Apply suggestions from code review
Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/basic_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/basic_udf_with_gpu.ipynb
@@ -4,7 +4,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Basic UDF with GPU\n",
+    "## Basic UDF with GPU Support\n",
     "\n",
     "In this tutorial we will build a very simple UDF which uses `pytorch` to validate GPU detection."
    ],
