Apply suggestions from code review
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>
Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/using_gpu_in_udf.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/using_gpu_in_udf.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# Using GPU's in UDF's\n",
     "\n",
-    "This tutorial shows step-by-step how to build a CUDA enabled Script Language Container with the appropriate ML libraries and how to create UDF's with GPU support.\n",
+    "This tutorial shows step-by-step how to build a CUDA enabled Script Language Container with the appropriate ML libraries and how to create UDF's with GPU acceleration.\n",
     "For a detailed explanation about how to build a custom Script Language Container, please read the tutorial [Script Languages Container](../script_languages_container/using_the_script_languages_container_tool.ipynb)\n",
     "\n",
     "**Notes:**\n",
-    "- **This tutorial currently does not support a SaaS backend.**\n",
+    "- **This tutorial currently does not support Exasol SaaS instances.**\n",
     "- **This tutorial was written to work with Exasol DB 2025.01.x. Newer versions of Exasol potentially will not work correctly.**"
    ]
   },
@@ -22,9 +22,9 @@
    "source": [
     "## Prerequisites\n",
     "\n",
-    "Prior to using this notebook the [Configure the AI-Lab](../main_config.ipynb) step needs to be completed.\n",
+    "Prior to using this notebook step [Configure the AI-Lab](../main_config.ipynb) needs to be completed.\n",
     "\n",
-    "Make sure to enable the `nvidia` accelerator option in case you choose the \"Exasol Docker db\" as database."
+    "Make sure to enable the `nvidia` accelerator option in case you choose the \"Exasol Docker DB\" as database."
    ]
   },
   {
@@ -34,9 +34,9 @@
     "### Content\n",
     "\n",
     "This tutorial contains the following notebooks:\n",
-    "1. [Setup](./setup.ipynb) prepares a GPU enabled Script Languages Container. You need to run once before you can execute the below examples.\n",
-    "1. [Basic UDF with GPU](./basic_udf_with_gpu.ipynb)\n",
-    "2. [Advanced UDF with GPU](./advanced_udf_with_gpu.ipynb)"
+    "1. The [setup](./setup.ipynb) prepares a GPU enabled Script Languages Container. You need to run it once before you can execute the below examples.\n",
+    "1. [Basic UDF with GPU Support](./basic_udf_with_gpu.ipynb)\n",
+    "2. [Advanced UDF with GPU Support](./advanced_udf_with_gpu.ipynb)"
    ],
    "id": "b71180769a8c3265"
   }
