Apply suggestions from code review
Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/setup.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/setup.ipynb
@@ -4,7 +4,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# Setup Script Language Container with GPU support\n",
+    "# Setup Script Language Container with GPU Support\n",
     "\n",
     "We will create a custom Script Language Container with GPU support and install two machine learning libraries to it:\n",
     "* `pytorch`\n",
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "source": [
     "## Preparation\n",
-    "Similar to [Script Languages Container](../script_languages_container/using_the_script_languages_container_tool.ipynb), we instantiate class `ScriptLanguagesContainer`. Exasol provides a special flavor for CUDA enabled Script Language Container: `template-Exasol-8-python-3.10-cuda-conda`. This flavor already brings basic packages (e.g. CUDA) and configurations which are necessary to use GPU's in UDF's.\n"
+    "Similar to the [Script Languages Container tutorial](../script_languages_container/using_the_script_languages_container_tool.ipynb), we instantiate the class `ScriptLanguagesContainer`. Exasol provides a special flavor for CUDA enabled Script Language Container: `template-Exasol-8-python-3.10-cuda-conda`. This flavor already brings basic packages (e.g. CUDA) and configurations which are necessary to use GPU's in UDF's.\n"
    ],
    "id": "32940312a78ab6b9"
   },
@@ -73,7 +73,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### Add ML libraries\n",
+    "### Add ML Libraries\n",
     "In this example we use the [pytorch](https://anaconda.org/conda-forge/pytorch) Conda package to create a basic UDF and check if the GPU is available. We specify explictily to use the CUDA 12.9 version of `pytorch`, the same CUDA version which is already installed in `template-Exasol-8-python-3.10-cuda-conda`. Also, we add Exasol's `exasol-transformers-extension` package which will be used in the more advanced example."
    ],
    "id": "ff24405dccb541f5"
@@ -96,8 +96,8 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### Export the Container to a file\n",
-    "We can now build and export the new Script Language Container to a tar gz file. As the file gets quite large, we do not want to copy the file to an export path. The internal file is enough for this tutorial. The class `ScriptLanguageContainer` offers the method `export_no_copy` for this use case. **Note:** this step might take very long (>1h)."
+    "### Export the Container to a File\n",
+    "We can now build and export the new Script Language Container to a tar.gz file. As the file gets quite large, we do not want to copy the file to an export path. The internal file is enough for this tutorial. The class `ScriptLanguageContainer` offers the method `export_no_copy` for this use case. **Note:** this step might take very long (>1h)."
    ],
    "id": "5dd47059ddcc1e06"
   },
