--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -119,7 +119,7 @@
    "source": [
     "### Create the UDF\n",
     "\n",
-    "Now we create the UDF which implements the \"semantic join\" between pairs of text data (text1, text2) by computing their semantic similarity using a transformer neural network model (from the sentence-transformers library). It runs on a GPU and is designed to scale to large amounts of data by processing in batches. For each pair (text1 and text2), it computes the cosine similarity between their embeddings on the GPU. The UDF returns (emits) text1 and text2, as well as the `similarity_score` (between -1 and 1, with 1.0 = identical).\n"
+    "Now we are ready to create the UDF implementing the \"semantic join\" between pairs of text data (_text1_, _text2_) by computing their semantic similarity using a transformer neural network model (from the sentence-transformers library). It runs on a GPU and is designed to scale to large amounts of data by processing in batches. For each pair (_text1_, _text2_), it computes the cosine similarity between their embeddings on the GPU. The UDF returns (emits) _text1_ and _text2_, as well as the `similarity_score` (between -1 and 1, with 1.0 = identical).\n"
    ],
    "id": "67d0dc114de6c50"
   },
@@ -260,7 +260,7 @@
    "source": [
     "### Run the UDF on the New Data\n",
     "\n",
-    "Now we apply the `semantic_join` UDF on the topics and titles from the NEWS table, which was created by the S3 Virtual Schema tutorial. The query will return for every news TITLE, the TOPICs that best semantically match it, ranks them by how similar they are, and filters out all but the strong matches (similarity > 0.5). You get, for each TITLE, a list of TOPICs it is semantically closest to, in order."
+    "Now we apply the `semantic_join` UDF on the topics and titles from the NEWS table, which was created by the S3 Virtual Schema tutorial. The query will return for every news TITLE, the TOPICs that best semantically match it, ranks them by how similar they are, and filters out all but the strong matches (similarity > 0.5). You get, for each TITLE, a list of most plausible TOPICs, in order."
    ],
    "id": "68e6a6cadb020ea8"
   },
@@ -308,7 +308,7 @@
     "### Additional Notes\n",
     "\n",
     "#### Parallel execution\n",
-    "Please note that executing multiple queries with GPU UDFs in parallel can lead to unexpected errors, as the GPU libraries used within the UDFs may attempt to allocate the same GPU device and memory simultaneously. In the current Exasol version, it's the users responsibility to ensure that the libraries are configured appropriately or that only one query uses a GPU device.\n",
+    "Please note that executing multiple queries with GPU UDFs in parallel can lead to unexpected errors, as the GPU libraries used within the UDFs may attempt to allocate the same GPU device and memory simultaneously. In the current Exasol version, the user responsible to ensure that the libraries are configured appropriately or that only one query uses a GPU device.\n",
     "Here some links which might be helpful for the configuration:\n",
     "- [Manage GPU Memory When Using TensorFlow and PyTorch](https://docs.ncsa.illinois.edu/systems/hal/en/latest/user-guide/prog-env/gpu-memory.html)\n",
     "- [Set per process memory fraction for Pytorch](https://docs.pytorch.org/docs/stable/generated/torch.cuda.memory.set_per_process_memory_fraction.html)\n",
