Added logo and applied suggestion from review

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -4,6 +4,10 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "## Advanced UDF with GPU\n",
     "\n",
     "This perform an in-depth analysis of news articles using the data provided in the S3 virtual schema tutorial. The dataset that we will be working with, is derived from the well-known Reuters 21578 collection—a comprehensive repository of documents containing a wide variety of news articles, each categorized according to its subject matter.\n",
@@ -14,7 +18,7 @@
     "\n",
     "Once our tables are set up and populated, we will utilize a powerful natural language processing approach to link news article titles to their most relevant topics. Specifically, we will employ the `sentence-transformers` model—a state-of-the-art model designed for producing high-quality sentence embeddings. This model will run in a UDF leveraging the GPU to efficiently generate vector representations for both the titles and topics.\n",
     "\n",
-    "By comparing these embeddings, our system will automatically match each article title with the most relevant topic from our topics table. Finally, we will output the best-matching topic for each title, providing valuable insights into the subject distribution of our set of news articles."
+    "By comparing these embeddings, our system will automatically match each article title with the most relevant topic from our topics table. Finally, we will output the top-N topics for each title, providing valuable insights into the subject distribution of our set of news articles."
    ],
    "id": "3099daff8bb6b53f"
   },
