--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/setup.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/setup.ipynb
@@ -4,6 +4,10 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Setup Script Language Container with GPU Support\n",
     "\n",
     "We will create a custom Script Language Container with GPU support and install two machine learning libraries to it:\n",
