--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/using_gpu_in_udf.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/using_gpu_in_udf.ipynb
@@ -5,6 +5,10 @@
    "id": "06585243-2e50-4f9b-8d6f-b79aade6f8f5",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "# Using GPU's in UDF's\n",
     "\n",
     "This tutorial shows step-by-step how to build a CUDA enabled Script Language Container with the appropriate ML libraries and how to create UDF's with GPU acceleration.\n",
