--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/basic_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/basic_udf_with_gpu.ipynb
@@ -4,6 +4,10 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "<div style=\"text-align: right;\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
+    "</div>\n",
+    "\n",
     "## Basic UDF with GPU Support\n",
     "\n",
     "In this tutorial we will build a very simple UDF which uses `pytorch` to validate GPU detection."
