Apply suggestions from code review
Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/basic_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/basic_udf_with_gpu.ipynb
@@ -38,7 +38,7 @@
     "### Instantiate ScriptLanguagesContainer\n",
     "\n",
     "The following cell creates an instance of class `ScriptLanguageContainer` from the notebook-connector,\n",
-    "which enables using the`exaslct` in the AI Lab in a convenient way."
+    "which enables us to use the Script Language Container (SLC)."
    ],
    "id": "297a475cb817d3eb"
   },
@@ -77,9 +77,9 @@
    "source": [
     "### Create a GPU enabled UDF\n",
     "\n",
-    "Exasol's UDF provide the script option `%perInstanceRequiredAcceleratorDevices` which allow the user to define the behavior of the database when executing UDF's. This option can have the following values:\n",
+    "Exasol UDFs provide the script option `%perInstanceRequiredAcceleratorDevices` which allows us to define the behavior of the database when executing UDF's. This option can have the following values:\n",
     "* `None`: NO accelerator selected/required (implicit default for CPU processing)\n",
-    "* `GpuNvidia`: NVIDIA GPU accelerator required by the UDF. The invocation of the UDF will fail if GPU is unavailable or the Script Language Container is not suited for GPU's.\n",
+    "* `GpuNvidia`: NVIDIA GPU accelerator required by the UDF. The invocation of the UDF will fail if the GPU is unavailable or the Script Language Container is not suited for GPU's.\n",
     "* `None|GpuNvidia`: NVIDIA GPU accelerator preferred but fallback to NO accelerator (CPU processing)\n",
     "\n",
     "The following sample UDF requires GPU support by adding the line:\n",
