Applied suggestion from review

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/using_gpu_in_udf.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/using_gpu_in_udf.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "**Notes:**\n",
     "- **This tutorial currently does not support Exasol SaaS instances.**\n",
-    "- **This tutorial was written to work with Exasol DB 2025.01.x. Newer versions of Exasol potentially will not work correctly.**"
+    "- **This tutorial was written to work with Exasol DB 2025.01.x. Different versions of Exasol potentially will not work correctly.**"
    ]
   },
   {
