Added UDF wich reas nvidia env variables to basic_udf_with_gpu.ipynb

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/basic_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/basic_udf_with_gpu.ipynb
@@ -26,6 +26,7 @@
    "outputs": [],
    "execution_count": null,
    "source": [
+    "import os\n",
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
    ],
@@ -75,7 +76,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### Create a GPU enabled UDF\n",
+    "### Create GPU enabled UDFs\n",
     "\n",
     "Exasol UDFs provide the script option `%perInstanceRequiredAcceleratorDevices` which allows us to define the behavior of the database when executing UDF's. This option can have the following values:\n",
     "* `None`: NO accelerator selected/required (implicit default for CPU processing)\n",
@@ -86,9 +87,41 @@
     "```\n",
     " %perInstanceRequiredAcceleratorDevices GpuNvidia;\n",
     "```\n",
-    "and returns the string `\"GPU Found\"` if the GPU was detected in the UDF."
+    "and checks the environment variables `NVIDIA_VISIBLE_DEVICES` and `CUDA_VISIBLE_DEVICES`."
    ],
    "id": "9d1775bc61c52c7d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "import textwrap\n",
+    "conn.execute(textwrap.dedent(f\"\"\"\n",
+    "CREATE OR REPLACE {slc.language_alias} SCALAR SCRIPT\n",
+    "nvidia_env_variable_check()\n",
+    "EMITS (var_name VARCHAR(1000), var_value VARCHAR(1000)) AS\n",
+    " %perInstanceRequiredAcceleratorDevices GpuNvidia;\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "def run(ctx):\n",
+    "    ctx.emit(\"NVIDIA_VISIBLE_DEVICES\", os.getenv('NVIDIA_VISIBLE_DEVICES', \"<invalid>\"))\n",
+    "    ctx.emit(\"CUDA_VISIBLE_DEVICES\", os.getenv('CUDA_VISIBLE_DEVICES', \"<invalid>\"))\n",
+    "/\n",
+    "\"\"\"))\n",
+    "\n",
+    "res = conn.export_to_pandas(\"SELECT nvidia_env_variable_check();\")\n",
+    "res"
+   ],
+   "id": "4dbb8695f5f85632"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The next UDF leverages the `pytorch` package which was installed in our custom Script Language Container and returns the string \"GPU Found\" if the GPU was detected in the UDF by `pytorch`.",
+   "id": "aa7ffd622af07f6a"
   },
   {
    "metadata": {},
@@ -102,17 +135,10 @@
     "gpu_available()\n",
     "RETURNS VARCHAR(10000) AS\n",
     " %perInstanceRequiredAcceleratorDevices GpuNvidia;\n",
-    " %env PYTORCH_CUDA_DEBUG=1;\n",
-    " %env CUDA_DEVICE_DEBUG=1;\n",
-    "\n",
     "\n",
     "import torch\n",
-    "import os\n",
-    "import subprocess\n",
     "\n",
     "def run(ctx):\n",
-    "    #result = subprocess.run(['nvidia-smi'], capture_output=True, text=True)\n",
-    "    #return result.stdout\n",
     "    if torch.cuda.is_available():\n",
     "        return \"GPU Found\"\n",
     "    else:\n",
@@ -120,11 +146,10 @@
     "/\n",
     "\"\"\"))\n",
     "\n",
-    "res = conn.execute(\"SELECT gpu_available();\")\n",
-    "for r in res:\n",
-    "    print(r[0])"
+    "res = conn.export_to_pandas(\"SELECT gpu_available();\")\n",
+    "res"
    ],
-   "id": "4dbb8695f5f85632"
+   "id": "21e1cf793f2e9a75"
   },
   {
    "metadata": {},
