Adjustments in basic_udf_with_gpu.ipynb

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/basic_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/basic_udf_with_gpu.ipynb
@@ -87,7 +87,7 @@
     "```\n",
     " %perInstanceRequiredAcceleratorDevices GpuNvidia;\n",
     "```\n",
-    "and checks the environment variables `NVIDIA_VISIBLE_DEVICES` and `CUDA_VISIBLE_DEVICES`."
+    "and emits the value of the environment variable `NVIDIA_VISIBLE_DEVICES`."
    ],
    "id": "9d1775bc61c52c7d"
   },
@@ -108,7 +108,6 @@
     "\n",
     "def run(ctx):\n",
     "    ctx.emit(\"NVIDIA_VISIBLE_DEVICES\", os.getenv('NVIDIA_VISIBLE_DEVICES', \"<invalid>\"))\n",
-    "    ctx.emit(\"CUDA_VISIBLE_DEVICES\", os.getenv('CUDA_VISIBLE_DEVICES', \"<invalid>\"))\n",
     "/\n",
     "\"\"\"))\n",
     "\n",
