Fixed comments from review

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -8,7 +8,7 @@
     "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
     "</div>\n",
     "\n",
-    "## Advanced UDF with GPU\n",
+    "## Advanced UDF using GPU Acceleration\n",
     "\n",
     "This perform an in-depth analysis of news articles using the data provided in the S3 virtual schema tutorial. The dataset that we will be working with, is derived from the well-known Reuters 21578 collection—a comprehensive repository of documents containing a wide variety of news articles, each categorized according to its subject matter.\n",
     "\n",
@@ -73,7 +73,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Connect to the database and activate the container",
+   "source": "### Connect to the Database and activate the Container",
    "id": "3591c8128d27776"
   },
   {
