--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/basic_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/basic_udf_with_gpu.ipynb
@@ -8,9 +8,9 @@
     "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
     "</div>\n",
     "\n",
-    "## Basic UDF with GPU Support\n",
+    "## Basic UDF using GPU Acceleration\n",
     "\n",
-    "In this tutorial we will build a very simple UDF which uses `pytorch` to validate GPU detection."
+    "In this tutorial we will build two very simple UDFs which demonstrate that GPU detection works."
    ],
    "id": "1e48322dd9672749"
   },
@@ -57,7 +57,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Connect to the database and activate the container",
+   "source": "### Connect to the Database and activate the Container",
    "id": "ffc984ca5b56f59d"
   },
   {
